<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Jordsand Bird count</string>
    <string name="title_activity_census_selection">Choose count</string>
    <string name="title_activity_new_census">Start count</string>
    <string name="title_activity_area_selection">Area</string>
    <string name="title_activity_add_sighting">Observations</string>
    <string name="title_activity_species_counter">Counter</string>
    <string name="title_activity_new_species">New species</string>
    <string name="title_activity_census_display">Count</string>

    <!-- menus -->
    <string name="menu_terminate_census">Terminate count</string>
    <string name="menu_abort_census">Abort count</string>
    <string name="menu_add_new_species">Add species</string>
    <string name="menu_export_census_summary">Export summary</string>
    <string name="menu_export_census_details">Export complete details</string>

    <!-- status -->
    <string name="terminate_bird_count">The count will be terminated and may not continued later on.</string>
    <string name="abort_bird_count">The count will be aborted and may not continued later on.</string>
    <string name="census_terminated">The count has been terminated</string>
    <string name="census_aborted">The count has been aborted</string>

    <!-- overview activity -->
    <string name="overview_or">or</string>
    <string name="overview_show_data">Show data</string>
    <string name="overview_start_census">Start census</string>
    <string name="overview_continue_census">Continue census</string>

    <!-- new census activity -->
    <string name="new_census_start_time">Start</string>
    <string name="new_census_observer">Observer</string>
    <string name="new_census_water_gauge">Water gauge</string>
    <string name="new_census_wind">Wind</string>
    <string name="new_census_precipitation">Precipitation</string>
    <string name="new_census_visibility">View</string>
    <string name="new_census_glaciation_lvl">Glaciation level</string>
    <string name="new_census_go">Start census</string>
    <string name="new_census_start_time_hint">01.01.2001 09:00</string>
    <string name="new_census_water_gauge_hint">49.5</string>
    <string name="new_census_wind_strength_hint">2</string>
    <string name="new_census_observer_hint">Observer 1 &#8230;</string>

    <!-- area selection -->
    <string name="area_selection_code_preview">Code</string>
    <string name="area_selection_name_preview">Area name</string>
    <string name="area_selection_list">Show list</string>

    <!-- add sightings -->
    <string name="add_sighting_search">Search for a species</string>
    <string name="add_sighting_new_species">New species</string>
    <string name="add_sighting_species_name">Species name</string>
    <string name="add_sighting_species_scientific">Scientific</string>
    <string name="add_sighting_count">Count</string>
    <string name="start_counter">Start counter</string>
    <string name="sighting_increase_count">+ 1</string>
    <string name="sighting_increase_count_10">+ 10</string>
    <string name="sighting_decrease_count">- 1</string>
    <string name="sighting_decrease_count_10">- 10</string>

    <!-- species counter -->
    <string name="species_counter_usage_hint">Just use the buttons to modify the counter or use the volume keys.</string>

    <!-- new species -->
    <string name="new_species_name">Name</string>
    <string name="new_species_scientific">Scientific (optional)</string>
    <string name="new_species_count">Count</string>
    <string name="existing_species">This species does already!</string>

    <!-- census selection -->
    <string name="census_date">Date</string>
    <string name="census_observer">Observer</string>
    <string name="total_species_count">%1$d species observed,\n%2$d instances total</string>
    <string name="census_selection_enter_date">Enter date:</string>
    <string name="census_selection_enter_date_day">Day</string>
    <string name="census_selection_enter_date_month">Month</string>
    <string name="census_selection_enter_date_year">Year</string>

    <!-- census display -->
    <string name="census_overview">Overview</string>
    <string name="census_details">Details</string>
    <string name="observation_name">Name</string>
    <string name="observation_scientific">(%1$s)</string>
    <string name="observation_count">Count</string>
    <string name="observation_area_title">Area</string>
    <string name="census_overview_duration_title">Time period:</string>
    <string name="census_overview_duration">%1$s - %2$s</string>
    <string name="census_overview_observer">Observer:</string>
    <string name="census_overview_weather">Wetter</string>
    <string name="census_overview_water_gauge">Water gauge:</string>
    <string name="census_overview_tv_wind">Wind:</string>
    <string name="census_overview_wind">%1$s %2$s</string>
    <string name="census_overview_precipitation">Precipitation:</string>
    <string name="census_overview_visibility">View:</string>
    <string name="census_overview_glaciation_lvl">Glaciation level:</string>
    <string name="census_overview_observations">Observations</string>
    <string name="census_overview_different_species">Different Species:</string>
    <string name="census_overview_total_observations">Total number of observations:</string>

    <!-- census export -->
    <string name="census_export_prefix">BirdCount</string>
    <string name="census_export_date_pattern" translatable="false">%tY_%tm_%td</string>
    <string name="census_export_summary_suffix">summary</string>
    <string name="census_export_complete_suffix">complete</string>
    <string name="census_export_fname_separator" translatable="false">_</string>
    <string name="census_export_success">Bird count was exported successfully</string>
    <string name="census_export_error">An error occurred while exporting the bird count 😖</string>
    <string name="census_export_column_area">Area</string>
    <string name="census_export_column_species">Species</string>
    <string name="census_export_column_species_scientific">Scientific</string>
    <string name="census_export_column_count">Count</string>

    <!-- misc -->
    <string name="ok">OK</string>
    <string name="abort">Cancel</string>
    <string name="save">Save</string>
    <string name="unknown">"?"</string>
    <string name="field_unset">---</string>
    <string name="error">Error</string>

    <string-array name="wind_dirs">
        <item>---</item>
        <item>North</item>
        <item>Northeast</item>
        <item>East</item>
        <item>Southeast</item>
        <item>South</item>
        <item>Southwest</item>
        <item>West</item>
        <item>Northwest</item>
    </string-array>

    <string-array name="precipitation">
        <item>none</item>
        <item>drizzel</item>
        <item>rain</item>
    </string-array>

    <string-array name="visibility">
        <item>clear</item>
        <item>misty</item>
        <item>foggy</item>
    </string-array>

    <string-array name="glaciation_level">
        <item>free</item>
        <item>Riparian zone</item>
        <item>complete</item>
    </string-array>

    <string name="service_description">The service saves an ongoing count and accesses the database</string>
</resources>
