<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.jordsand.birdcensus.activities.Overview">

    <TextView
        android:id="@+id/show_or_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview_or"
        app:layout_constraintTop_toBottomOf="@+id/start_census"
        app:layout_constraintRight_toRightOf="@+id/start_census"
        app:layout_constraintLeft_toLeftOf="@+id/start_census"
        app:layout_constraintBottom_toTopOf="@+id/continue_census" />

    <Button
        android:id="@+id/show_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview_show_data"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/start_or_continue"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/start_census"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview_start_census"
        app:layout_constraintTop_toBottomOf="@+id/start_or_continue"
        app:layout_constraintRight_toRightOf="@+id/start_or_continue"
        app:layout_constraintLeft_toLeftOf="@+id/start_or_continue"
        app:layout_constraintBottom_toTopOf="@+id/show_or_start" />

    <Button
        android:id="@+id/continue_census"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview_continue_census"
        app:layout_constraintRight_toRightOf="@+id/show_or_start"
        app:layout_constraintLeft_toLeftOf="@+id/show_or_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_or_start"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/start_or_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview_or"
        app:layout_constraintTop_toBottomOf="@+id/show_data"
        app:layout_constraintRight_toRightOf="@+id/show_data"
        app:layout_constraintLeft_toLeftOf="@+id/show_data"
        app:layout_constraintBottom_toTopOf="@+id/start_census" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="20dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline5"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline6"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical" />
</android.support.constraint.ConstraintLayout>
